# DepthKCF

./: CMakeLists.txt  DepthKCF.kdev4  README.md
.kdev4/: DepthKCF.kdev4  _custom.kdev4
include/: config.h  cvserver.h  cvserver.hpp  targetver.h  usart.h
src/: cvclient.cpp  cvserver.cpp  depth.cpp  fhog.cpp  main.cpp  usart.cpp
